src/test/fun-test/semantic/LogicalAndDouble3.java.err
Semantic error: bang operator operand shouldn't be DOUBLE, line 3, pos 10
