src/test/fun-test/semantic/LogicalAndDouble3.java
class Main {
    void main() {
        !0.E1;
    }
}